compiler/compiler/Parser.output
Terminals unused in grammar

   TDOT
   TQUOTE


State 7 conflicts: 3 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | statements

    3 statements: statement
    4           | statements statement

    5 statement: var_decl
    6          | val_decl
    7          | method_decl
    8          | method_arg_decl
    9          | expression
   10          | return

   11 block: TLBRACE statements TRBRACE
   12      | TLBRACE TRBRACE

   13 return: TRETURN
   14       | TRETURN identifier
   15       | TRETURN method_call_expr
   16       | TRETURN constant

   17 var_decl: TVAR identifier TCOLON identifier
   18         | TVAR identifier TCOLON identifier TASSIGN expression

   19 val_decl: TVAL identifier TCOLON identifier TASSIGN expression

   20 method_arg_decl: identifier TCOLON identifier
   21                | identifier TCOLON identifier TASSIGN expression

   22 method_decl: TFUN identifier TLPAREN method_decl_args TRPAREN block
   23            | TFUN identifier TLPAREN method_decl_args TRPAREN TCOLON identifier block

   24 method_decl_args: %empty
   25                 | method_arg_decl
   26                 | method_decl_args TCOMMA method_arg_decl

   27 method_call_expr: identifier TLPAREN method_call_args TRPAREN

   28 assignment_expr: identifier TASSIGN expression

   29 expression: method_call_expr
   30           | assignment_expr
   31           | identifier
   32           | constant

   33 identifier: TIDENTIFIER

   34 constant: TINTEGER
   35         | TSTRING

   36 method_call_arg: identifier
   37                | method_call_expr
   38                | constant

   39 method_call_args: %empty
   40                 | method_call_arg
   41                 | method_call_args TCOMMA method_call_arg


Terminals, with rules where they appear

$end (0) 0
error (256)
TINTEGER <integer> (258) 34
TSTRING <string> (259) 35
TIDENTIFIER <string> (260) 33
TFUN <token> (261) 22 23
TVAR <token> (262) 17 18
TVAL <token> (263) 19
TRETURN <token> (264) 13 14 15 16
TLPAREN <token> (265) 22 23 27
TRPAREN <token> (266) 22 23 27
TLBRACE <token> (267) 11 12
TRBRACE <token> (268) 11 12
TCOMMA <token> (269) 26 41
TDOT <token> (270)
TCOLON <token> (271) 17 18 19 20 21 23
TQUOTE <token> (272)
TASSIGN (273) 18 19 21 28


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program <block> (20)
    on left: 1 2, on right: 0
statements <block> (21)
    on left: 3 4, on right: 2 4 11
statement <statement> (22)
    on left: 5 6 7 8 9 10, on right: 3 4
block <block> (23)
    on left: 11 12, on right: 22 23
return <statement> (24)
    on left: 13 14 15 16, on right: 10
var_decl <statement> (25)
    on left: 17 18, on right: 5
val_decl <statement> (26)
    on left: 19, on right: 6
method_arg_decl <statement> (27)
    on left: 20 21, on right: 8 25 26
method_decl <statement> (28)
    on left: 22 23, on right: 7
method_decl_args <variable_vector> (29)
    on left: 24 25 26, on right: 22 23 26
method_call_expr <expression> (30)
    on left: 27, on right: 15 29 37
assignment_expr <expression> (31)
    on left: 28, on right: 30
expression <expression> (32)
    on left: 29 30 31 32, on right: 9 18 19 21 28
identifier <identifier> (33)
    on left: 33, on right: 14 17 18 19 20 21 22 23 27 28 31 36
constant <expression> (34)
    on left: 34 35, on right: 16 32 38
method_call_arg <expression> (35)
    on left: 36 37 38, on right: 40 41
method_call_args <expression_vector> (36)
    on left: 39 40 41, on right: 27 41


State 0

    0 $accept: . program $end

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3
    TFUN         shift, and go to state 4
    TVAR         shift, and go to state 5
    TVAL         shift, and go to state 6
    TRETURN      shift, and go to state 7

    $default  reduce using rule 1 (program)

    program           go to state 8
    statements        go to state 9
    statement         go to state 10
    return            go to state 11
    var_decl          go to state 12
    val_decl          go to state 13
    method_arg_decl   go to state 14
    method_decl       go to state 15
    method_call_expr  go to state 16
    assignment_expr   go to state 17
    expression        go to state 18
    identifier        go to state 19
    constant          go to state 20


State 1

   34 constant: TINTEGER .

    $default  reduce using rule 34 (constant)


State 2

   35 constant: TSTRING .

    $default  reduce using rule 35 (constant)


State 3

   33 identifier: TIDENTIFIER .

    $default  reduce using rule 33 (identifier)


State 4

   22 method_decl: TFUN . identifier TLPAREN method_decl_args TRPAREN block
   23            | TFUN . identifier TLPAREN method_decl_args TRPAREN TCOLON identifier block

    TIDENTIFIER  shift, and go to state 3

    identifier  go to state 21


State 5

   17 var_decl: TVAR . identifier TCOLON identifier
   18         | TVAR . identifier TCOLON identifier TASSIGN expression

    TIDENTIFIER  shift, and go to state 3

    identifier  go to state 22


State 6

   19 val_decl: TVAL . identifier TCOLON identifier TASSIGN expression

    TIDENTIFIER  shift, and go to state 3

    identifier  go to state 23


State 7

   13 return: TRETURN .
   14       | TRETURN . identifier
   15       | TRETURN . method_call_expr
   16       | TRETURN . constant

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3

    TINTEGER     [reduce using rule 13 (return)]
    TSTRING      [reduce using rule 13 (return)]
    TIDENTIFIER  [reduce using rule 13 (return)]
    $default     reduce using rule 13 (return)

    method_call_expr  go to state 24
    identifier        go to state 25
    constant          go to state 26


State 8

    0 $accept: program . $end

    $end  shift, and go to state 27


State 9

    2 program: statements .
    4 statements: statements . statement

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3
    TFUN         shift, and go to state 4
    TVAR         shift, and go to state 5
    TVAL         shift, and go to state 6
    TRETURN      shift, and go to state 7

    $default  reduce using rule 2 (program)

    statement         go to state 28
    return            go to state 11
    var_decl          go to state 12
    val_decl          go to state 13
    method_arg_decl   go to state 14
    method_decl       go to state 15
    method_call_expr  go to state 16
    assignment_expr   go to state 17
    expression        go to state 18
    identifier        go to state 19
    constant          go to state 20


State 10

    3 statements: statement .

    $default  reduce using rule 3 (statements)


State 11

   10 statement: return .

    $default  reduce using rule 10 (statement)


State 12

    5 statement: var_decl .

    $default  reduce using rule 5 (statement)


State 13

    6 statement: val_decl .

    $default  reduce using rule 6 (statement)


State 14

    8 statement: method_arg_decl .

    $default  reduce using rule 8 (statement)


State 15

    7 statement: method_decl .

    $default  reduce using rule 7 (statement)


State 16

   29 expression: method_call_expr .

    $default  reduce using rule 29 (expression)


State 17

   30 expression: assignment_expr .

    $default  reduce using rule 30 (expression)


State 18

    9 statement: expression .

    $default  reduce using rule 9 (statement)


State 19

   20 method_arg_decl: identifier . TCOLON identifier
   21                | identifier . TCOLON identifier TASSIGN expression
   27 method_call_expr: identifier . TLPAREN method_call_args TRPAREN
   28 assignment_expr: identifier . TASSIGN expression
   31 expression: identifier .

    TLPAREN  shift, and go to state 29
    TCOLON   shift, and go to state 30
    TASSIGN  shift, and go to state 31

    $default  reduce using rule 31 (expression)


State 20

   32 expression: constant .

    $default  reduce using rule 32 (expression)


State 21

   22 method_decl: TFUN identifier . TLPAREN method_decl_args TRPAREN block
   23            | TFUN identifier . TLPAREN method_decl_args TRPAREN TCOLON identifier block

    TLPAREN  shift, and go to state 32


State 22

   17 var_decl: TVAR identifier . TCOLON identifier
   18         | TVAR identifier . TCOLON identifier TASSIGN expression

    TCOLON  shift, and go to state 33


State 23

   19 val_decl: TVAL identifier . TCOLON identifier TASSIGN expression

    TCOLON  shift, and go to state 34


State 24

   15 return: TRETURN method_call_expr .

    $default  reduce using rule 15 (return)


State 25

   14 return: TRETURN identifier .
   27 method_call_expr: identifier . TLPAREN method_call_args TRPAREN

    TLPAREN  shift, and go to state 29

    $default  reduce using rule 14 (return)


State 26

   16 return: TRETURN constant .

    $default  reduce using rule 16 (return)


State 27

    0 $accept: program $end .

    $default  accept


State 28

    4 statements: statements statement .

    $default  reduce using rule 4 (statements)


State 29

   27 method_call_expr: identifier TLPAREN . method_call_args TRPAREN

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3

    $default  reduce using rule 39 (method_call_args)

    method_call_expr  go to state 35
    identifier        go to state 36
    constant          go to state 37
    method_call_arg   go to state 38
    method_call_args  go to state 39


State 30

   20 method_arg_decl: identifier TCOLON . identifier
   21                | identifier TCOLON . identifier TASSIGN expression

    TIDENTIFIER  shift, and go to state 3

    identifier  go to state 40


State 31

   28 assignment_expr: identifier TASSIGN . expression

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3

    method_call_expr  go to state 16
    assignment_expr   go to state 17
    expression        go to state 41
    identifier        go to state 42
    constant          go to state 20


State 32

   22 method_decl: TFUN identifier TLPAREN . method_decl_args TRPAREN block
   23            | TFUN identifier TLPAREN . method_decl_args TRPAREN TCOLON identifier block

    TIDENTIFIER  shift, and go to state 3

    $default  reduce using rule 24 (method_decl_args)

    method_arg_decl   go to state 43
    method_decl_args  go to state 44
    identifier        go to state 45


State 33

   17 var_decl: TVAR identifier TCOLON . identifier
   18         | TVAR identifier TCOLON . identifier TASSIGN expression

    TIDENTIFIER  shift, and go to state 3

    identifier  go to state 46


State 34

   19 val_decl: TVAL identifier TCOLON . identifier TASSIGN expression

    TIDENTIFIER  shift, and go to state 3

    identifier  go to state 47


State 35

   37 method_call_arg: method_call_expr .

    $default  reduce using rule 37 (method_call_arg)


State 36

   27 method_call_expr: identifier . TLPAREN method_call_args TRPAREN
   36 method_call_arg: identifier .

    TLPAREN  shift, and go to state 29

    $default  reduce using rule 36 (method_call_arg)


State 37

   38 method_call_arg: constant .

    $default  reduce using rule 38 (method_call_arg)


State 38

   40 method_call_args: method_call_arg .

    $default  reduce using rule 40 (method_call_args)


State 39

   27 method_call_expr: identifier TLPAREN method_call_args . TRPAREN
   41 method_call_args: method_call_args . TCOMMA method_call_arg

    TRPAREN  shift, and go to state 48
    TCOMMA   shift, and go to state 49


State 40

   20 method_arg_decl: identifier TCOLON identifier .
   21                | identifier TCOLON identifier . TASSIGN expression

    TASSIGN  shift, and go to state 50

    $default  reduce using rule 20 (method_arg_decl)


State 41

   28 assignment_expr: identifier TASSIGN expression .

    $default  reduce using rule 28 (assignment_expr)


State 42

   27 method_call_expr: identifier . TLPAREN method_call_args TRPAREN
   28 assignment_expr: identifier . TASSIGN expression
   31 expression: identifier .

    TLPAREN  shift, and go to state 29
    TASSIGN  shift, and go to state 31

    $default  reduce using rule 31 (expression)


State 43

   25 method_decl_args: method_arg_decl .

    $default  reduce using rule 25 (method_decl_args)


State 44

   22 method_decl: TFUN identifier TLPAREN method_decl_args . TRPAREN block
   23            | TFUN identifier TLPAREN method_decl_args . TRPAREN TCOLON identifier block
   26 method_decl_args: method_decl_args . TCOMMA method_arg_decl

    TRPAREN  shift, and go to state 51
    TCOMMA   shift, and go to state 52


State 45

   20 method_arg_decl: identifier . TCOLON identifier
   21                | identifier . TCOLON identifier TASSIGN expression

    TCOLON  shift, and go to state 30


State 46

   17 var_decl: TVAR identifier TCOLON identifier .
   18         | TVAR identifier TCOLON identifier . TASSIGN expression

    TASSIGN  shift, and go to state 53

    $default  reduce using rule 17 (var_decl)


State 47

   19 val_decl: TVAL identifier TCOLON identifier . TASSIGN expression

    TASSIGN  shift, and go to state 54


State 48

   27 method_call_expr: identifier TLPAREN method_call_args TRPAREN .

    $default  reduce using rule 27 (method_call_expr)


State 49

   41 method_call_args: method_call_args TCOMMA . method_call_arg

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3

    method_call_expr  go to state 35
    identifier        go to state 36
    constant          go to state 37
    method_call_arg   go to state 55


State 50

   21 method_arg_decl: identifier TCOLON identifier TASSIGN . expression

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3

    method_call_expr  go to state 16
    assignment_expr   go to state 17
    expression        go to state 56
    identifier        go to state 42
    constant          go to state 20


State 51

   22 method_decl: TFUN identifier TLPAREN method_decl_args TRPAREN . block
   23            | TFUN identifier TLPAREN method_decl_args TRPAREN . TCOLON identifier block

    TLBRACE  shift, and go to state 57
    TCOLON   shift, and go to state 58

    block  go to state 59


State 52

   26 method_decl_args: method_decl_args TCOMMA . method_arg_decl

    TIDENTIFIER  shift, and go to state 3

    method_arg_decl  go to state 60
    identifier       go to state 45


State 53

   18 var_decl: TVAR identifier TCOLON identifier TASSIGN . expression

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3

    method_call_expr  go to state 16
    assignment_expr   go to state 17
    expression        go to state 61
    identifier        go to state 42
    constant          go to state 20


State 54

   19 val_decl: TVAL identifier TCOLON identifier TASSIGN . expression

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3

    method_call_expr  go to state 16
    assignment_expr   go to state 17
    expression        go to state 62
    identifier        go to state 42
    constant          go to state 20


State 55

   41 method_call_args: method_call_args TCOMMA method_call_arg .

    $default  reduce using rule 41 (method_call_args)


State 56

   21 method_arg_decl: identifier TCOLON identifier TASSIGN expression .

    $default  reduce using rule 21 (method_arg_decl)


State 57

   11 block: TLBRACE . statements TRBRACE
   12      | TLBRACE . TRBRACE

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3
    TFUN         shift, and go to state 4
    TVAR         shift, and go to state 5
    TVAL         shift, and go to state 6
    TRETURN      shift, and go to state 7
    TRBRACE      shift, and go to state 63

    statements        go to state 64
    statement         go to state 10
    return            go to state 11
    var_decl          go to state 12
    val_decl          go to state 13
    method_arg_decl   go to state 14
    method_decl       go to state 15
    method_call_expr  go to state 16
    assignment_expr   go to state 17
    expression        go to state 18
    identifier        go to state 19
    constant          go to state 20


State 58

   23 method_decl: TFUN identifier TLPAREN method_decl_args TRPAREN TCOLON . identifier block

    TIDENTIFIER  shift, and go to state 3

    identifier  go to state 65


State 59

   22 method_decl: TFUN identifier TLPAREN method_decl_args TRPAREN block .

    $default  reduce using rule 22 (method_decl)


State 60

   26 method_decl_args: method_decl_args TCOMMA method_arg_decl .

    $default  reduce using rule 26 (method_decl_args)


State 61

   18 var_decl: TVAR identifier TCOLON identifier TASSIGN expression .

    $default  reduce using rule 18 (var_decl)


State 62

   19 val_decl: TVAL identifier TCOLON identifier TASSIGN expression .

    $default  reduce using rule 19 (val_decl)


State 63

   12 block: TLBRACE TRBRACE .

    $default  reduce using rule 12 (block)


State 64

    4 statements: statements . statement
   11 block: TLBRACE statements . TRBRACE

    TINTEGER     shift, and go to state 1
    TSTRING      shift, and go to state 2
    TIDENTIFIER  shift, and go to state 3
    TFUN         shift, and go to state 4
    TVAR         shift, and go to state 5
    TVAL         shift, and go to state 6
    TRETURN      shift, and go to state 7
    TRBRACE      shift, and go to state 66

    statement         go to state 28
    return            go to state 11
    var_decl          go to state 12
    val_decl          go to state 13
    method_arg_decl   go to state 14
    method_decl       go to state 15
    method_call_expr  go to state 16
    assignment_expr   go to state 17
    expression        go to state 18
    identifier        go to state 19
    constant          go to state 20


State 65

   23 method_decl: TFUN identifier TLPAREN method_decl_args TRPAREN TCOLON identifier . block

    TLBRACE  shift, and go to state 57

    block  go to state 67


State 66

   11 block: TLBRACE statements TRBRACE .

    $default  reduce using rule 11 (block)


State 67

   23 method_decl: TFUN identifier TLPAREN method_decl_args TRPAREN TCOLON identifier block .

    $default  reduce using rule 23 (method_decl)
